# multi-recommender

./: .gitignore  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  mongo_dataset.py  pyproject.toml  search.html  tox.ini
conf/base/: catalog.yml  parameters.yml
conf/base/parameters/: build_recommendations_based_similar.yml  drop_nan_column.yml
develop/: index.html
docs/: develop.md  index.md  modular_pipelines.md  pipelines.md
modular_pipelines/: index.html
notebooks/: View Recs.ipynb
notebooks/Anime/: Anime.ipynb  Build Recs Anime.ipynb  Translate Anime.ipynb
notebooks/Anime/scripts/: anime_pipeline_Dockerfile  anime_pipeline_module.py
notebooks/Manga/: Manga.ipynb
pipelines/: index.html
search/: search_index.json
src/: requirements.txt
src/multirec/: cli.py  pipeline_registry.py
src/multirec/extras/datasets/: mongo_dataset.py
src/multirec/pipelines/build_recommendations_based_similar/: README.md  nodes.py  pipeline.py
src/multirec/pipelines/drop_nan_column/: README.md
src/multirec/web/: __main__.py  app.py  exceptions.py  main_page.py  recs.py  utils.py
src/tests/: test_cli.py  test_run.py
src/tests/pipelines/build_recommendations_based_similar/: test_pipeline.py
src/tests/pipelines/drop_nan_column/: test_pipeline.py
